--- a/src/main/resources/templates/result1.html
+++ b/src/main/resources/templates/result1.html
@@ -16,7 +16,7 @@
     <form th:action="@{/order}" th:object="${userOrderForm}" class="form-horizontal" method="post">
         <h1>概算お見積り結果</h1>
         <div class="col-sm-12">
-            <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
+
             <h4>個人情報</h4>
             <table class="table table-bordered">
                 <col span="1" style="background-color: #A9B7C7;">
@@ -73,10 +73,11 @@
                 </tr>
                 </tbody>
             </table>
+            <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
             <div class="form-group">
                 <div class="text-center">
                     <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
-                    <button type="submit" name="complete" class="btn btn-primary">個人情報入力</button>
+                    <button type="submit" name="input3" class="btn btn-primary">個人情報入力</button>
                 </div>
             </div>
         </div>
