Top→見積入力→見積確認→見積表示 上記のページ遷移

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -13,13 +13,13 @@
 <body>
 <nav th:insert="header.html :: header"></nav>
 <div class="container">
-  <form th:action="@{/result}" th:object="${userOrderForm}" class="form-horizontal" method="post">
+  <form th:action="@{/result1}" th:object="${userOrderForm}" class="form-horizontal" method="post">
     <h1>お見積り情報確認</h1>
     <ul th:if="${#fields.hasErrors('all')}">
       <li th:each="err : ${#fields.errors('all')}" th:text="${err}"></li>
     </ul>
     <div class="col-sm-12">
-      <h4>個人情報</h4>
+      <!-- <h4>概算見積確認</h4> -->
       <table class="table table-bordered">
         <col span="1" style="background-color: #A9B7C7;">
         <col span="2" style="background-color: #FFFFFF;">
