--- a/src/main/resources/templates/result1.html
+++ b/src/main/resources/templates/result1.html
@@ -16,70 +16,89 @@
     <form th:action="@{/order}" th:object="${userOrderForm}" class="form-horizontal" method="post">
         <h1>概算お見積り結果</h1>
         <div class="col-sm-12">
+            <!--<div class="left">-->
+                <h4>個人情報</h4>
+                <table class="table table-bordered">
+                    <col span="1" style="background-color: #A9B7C7;">
+                    <col span="2" style="background-color: #FFFFFF;">
+                    <tbody>
 
-            <h4>個人情報</h4>
-            <table class="table table-bordered">
-                <col span="1" style="background-color: #A9B7C7;">
-                <col span="2" style="background-color: #FFFFFF;">
-                <tbody>
-
-                <tr>
-                    <th>転居元住所（都道府県）</th>
-                    <td>
-                        <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{oldPrefectureId}">東京</span>
-                    </td>
-                    <input type="hidden" name="oldPrefectureId" id="oldPrefectureId" th:value="*{oldPrefectureId}"/>
-                </tr>
-
-                <tr>
-                    <th>転居先住所（都道府県）</th>
-                    <td>
-                        <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{newPrefectureId}">東京</span>
-                    </td>
-                    <input type="hidden" name="newPrefectureId" id="newPrefectureId" th:value="*{newPrefectureId}"/>
-                </tr>
-
-                </tbody>
-            </table>
-            <h4>荷物情報</h4>
-            <table class="table table-bordered">
-                <col span="1" style="background-color: #A9B7C7;">
-                <col span="2" style="background-color: #FFFFFF;">
-                <tbody>
-                <tr>
-                    <th style="width: 40%">段ボールの個数</th>
-                    <td><span th:text="*{box}"></span></td>
-                    <input type="hidden" name="box" id="box" th:value="*{box}"/>
-                </tr>
-                <tr>
-                    <th>ベッドの個数</th>
-                    <td><span th:text="*{bed}"></span></td>
-                    <input type="hidden" name="bed" id="bed" th:value="*{bed}"/>
-                </tr>
-                <tr>
-                    <th>自転車の個数</th>
-                    <td><span th:text="*{bicycle}"></span></td>
-                    <input type="hidden" name="bicycle" id="bicycle" th:value="*{bicycle}"/>
-                </tr>
-                <tr>
-                    <th>洗濯機の個数</th>
-                    <td><span th:text="*{washingMachine}"></span></td>
-                    <input type="hidden" name="washingMachine" id="washingMachine" th:value="*{washingMachine}"/>
-                </tr>
-                <tr>
-                    <th>洗濯機の設置工事申し込み</th>
-                    <td><span th:text="*{washingMachineInstallation} ? 'あり' : 'なし'"></span></td>
-                    <input type="hidden" name="washingMachineInstallation" id="washingMachineInstallation" th:value="*{washingMachineInstallation}"/>
-                </tr>
-                </tbody>
-            </table>
-            <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
-            <div class="form-group">
-                <div class="text-center">
-                    <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
-                    <button type="submit" name="input3" class="btn btn-primary">個人情報入力</button>
+                        <tr>
+                            <th>転居元住所（都道府県）</th>
+                            <td>
+                                <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{oldPrefectureId}">東京</span>
+                            </td>
+                            <input type="hidden" name="oldPrefectureId" id="oldPrefectureId" th:value="*{oldPrefectureId}"/>
+                        </tr>
+                        <tr>
+                            <th>転居先住所（都道府県）</th>
+                            <td>
+                                <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{newPrefectureId}">東京</span>
+                            </td>
+                            <input type="hidden" name="newPrefectureId" id="newPrefectureId" th:value="*{newPrefectureId}"/>
+                        </tr>
+                    </tbody>
+                </table>
+                <!--<div class="bland-message">
+                    ⇓<br>
+                    ⇓<br>
+                    ⇓<br>
                 </div>
-            </div>
+                <table class="table table-bordered">
+                    <col span="1" style="background-color: #A9B7C7;">
+                    <col span="2" style="background-color: #FFFFFF;">
+                    <tbody>
+                        <tr>
+                            <th>転居先住所（都道府県）</th>
+                            <td>
+                                <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{newPrefectureId}">東京</span>
+                            </td>
+                            <input type="hidden" name="newPrefectureId" id="newPrefectureId" th:value="*{newPrefectureId}"/>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>-->
+            <!--<div class="right">-->
+                <h4>荷物情報</h4>
+                <table class="table table-bordered">
+                    <col span="1" style="background-color: #A9B7C7;">
+                    <col span="2" style="background-color: #FFFFFF;">
+                    <tbody>
+                    <tr>
+                        <th style="width: 40%">段ボールの個数</th>
+                        <td><span th:text="*{box}"></span></td>
+                        <input type="hidden" name="box" id="box" th:value="*{box}"/>
+                    </tr>
+                    <tr>
+                        <th>ベッドの個数</th>
+                        <td><span th:text="*{bed}"></span></td>
+                        <input type="hidden" name="bed" id="bed" th:value="*{bed}"/>
+                    </tr>
+                    <tr>
+                        <th>自転車の個数</th>
+                        <td><span th:text="*{bicycle}"></span></td>
+                        <input type="hidden" name="bicycle" id="bicycle" th:value="*{bicycle}"/>
+                    </tr>
+                    <tr>
+                        <th>洗濯機の個数</th>
+                        <td><span th:text="*{washingMachine}"></span></td>
+                        <input type="hidden" name="washingMachine" id="washingMachine" th:value="*{washingMachine}"/>
+                    </tr>
+                    <tr>
+                        <th>洗濯機の設置工事申し込み</th>
+                        <td><span th:text="*{washingMachineInstallation} ? 'あり' : 'なし'"></span></td>
+                        <input type="hidden" name="washingMachineInstallation" id="washingMachineInstallation" th:value="*{washingMachineInstallation}"/>
+                    </tr>
+                    </tbody>
+                </table>
+           <!-- </div>-->
+                <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
+                <div class="form-group">
+                    <div class="text-center">
+                        <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
+                        <button type="submit" name="input3" class="btn btn-primary">個人情報入力</button>
+                    </div>
+                </div>
         </div>
     </form>
 </div>
