--- a/src/main/resources/templates/confirm1.html
+++ b/src/main/resources/templates/confirm1.html
@@ -75,7 +75,7 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToInput" class="btn btn-primary">修正</button>
+          <button type="submit" name="backToInput3" class="btn btn-primary">修正</button>
           <button type="submit" name="complete" class="btn btn-primary">詳細見積り依頼</button>
         </div>
       </div>
