--- a/src/main/resources/templates/confirm1.html
+++ b/src/main/resources/templates/confirm1.html
@@ -19,12 +19,26 @@
       <li th:each="err : ${#fields.errors('all')}" th:text="${err}"></li>
     </ul>
     <div class="col-sm-12">
-      <!-- <h4>概算見積確認</h4> -->
+      <h4>個人情報</h4>
       <table class="table table-bordered">
         <col span="1" style="background-color: #A9B7C7;">
         <col span="2" style="background-color: #FFFFFF;">
         <tbody>
-
+        <tr>
+          <th style="width: 40%">氏名</th>
+          <td><span th:text="*{customerName}"></span></td>
+          <input type="hidden" name="customerName" id="customerName" th:value="*{customerName}"/>
+        </tr>
+        <tr>
+          <th>連絡先TEL</th>
+          <td><span th:text="*{tel}"></span></td>
+          <input type="hidden" name="tel" id="tel" th:value="*{tel}"/>
+        </tr>
+        <tr>
+          <th>連絡先メールアドレス</th>
+          <td><span th:text="*{email}"></span></td>
+          <input type="hidden" name="email" id="email" th:value="*{email}"/>
+        </tr>
         <tr>
           <th>転居元住所（都道府県）</th>
           <td>
@@ -33,11 +47,21 @@
           <input type="hidden" name="oldPrefectureId" id="oldPrefectureId" th:value="*{oldPrefectureId}"/>
         </tr>
         <tr>
+          <th>転居元住所（市区町村以下）</th>
+          <td><span th:text="*{oldAddress}"></span></td>
+          <input type="hidden" name="oldAddress" id="oldAddress" th:value="*{oldAddress}"/>
+        </tr>
+        <tr>
           <th>転居先住所（都道府県）</th>
           <td>
             <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{newPrefectureId}">大阪</span>
           </td>
           <input type="hidden" name="newPrefectureId" id="newPrefectureId" th:value="*{newPrefectureId}"/>
+        </tr>
+        <tr>
+          <th>転居先住所（市区町村以下）</th>
+          <td><span th:text="*{newAddress}"></span></td>
+          <input type="hidden" name="newAddress" id="newAddress" th:value="*{newAddress}"/>
         </tr>
         </tbody>
       </table>
@@ -76,7 +100,7 @@
       <div class="form-group">
         <div class="text-center">
           <button type="submit" name="backToInput3" class="btn btn-primary">修正</button>
-          <button type="submit" name="complete" class="btn btn-primary">詳細見積り依頼</button>
+          <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button>
         </div>
       </div>
     </div>
