--- a/src/main/resources/templates/result1.html
+++ b/src/main/resources/templates/result1.html
@@ -22,16 +22,15 @@
                     <col span="1" style="background-color: #A9B7C7;">
                     <col span="2" style="background-color: #FFFFFF;">
                     <tbody>
-
                         <tr>
-                            <th>転居元住所（都道府県）</th>
+                            <th style="width: 40%">転居元住所（都道府県）</th>
                             <td>
                                 <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{oldPrefectureId}">東京</span>
                             </td>
                             <input type="hidden" name="oldPrefectureId" id="oldPrefectureId" th:value="*{oldPrefectureId}"/>
                         </tr>
                         <tr>
-                            <th>転居先住所（都道府県）</th>
+                            <th style="width: 40%">転居先住所（都道府県）</th>
                             <td>
                                 <span th:each="prefecture : ${prefectures}" th:text="${prefecture.prefectureName}" th:if="${prefecture.prefectureId}==*{newPrefectureId}">東京</span>
                             </td>
