--- a/src/main/resources/templates/result1.html
+++ b/src/main/resources/templates/result1.html
@@ -91,7 +91,7 @@
                     </tbody>
                 </table>
            <!-- </div>-->
-                <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
+            <h2>概算お見積り結果は<font size="10"><span th:text= " ${ price } " >  </span></font>円です。</h2>
                 <div class="form-group">
                     <div class="text-center">
                         <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
