--- a/src/main/resources/templates/result1.html
+++ b/src/main/resources/templates/result1.html
@@ -17,7 +17,7 @@
         <h1>概算お見積り結果</h1>
         <div class="col-sm-12">
             <!--<div class="left">-->
-                <h4>個人情報</h4>
+                <h4>移動情報</h4>
                 <table class="table table-bordered">
                     <col span="1" style="background-color: #A9B7C7;">
                     <col span="2" style="background-color: #FFFFFF;">
