--- a/src/main/resources/templates/input2.html
+++ b/src/main/resources/templates/input2.html
@@ -13,7 +13,7 @@
 <body>
 <nav th:insert="header.html :: header"></nav>
 <div class="container">
-    <form th:action="@{/submit}" th:object="${userOrderForm}" class="form-horizontal" method="post">
+    <form th:action="@{/result1}" th:object="${userOrderForm}" class="form-horizontal" method="post">
         <h1>お見積り情報入力</h1>
         <div class="col-sm-12">
             <fieldset>
@@ -76,7 +76,7 @@
             <div class="form-group">
                 <div class="text-center">
                     <button type="submit" name="backToTop" class="btn btn-primary">TOPへ戻る</button>
-                    <button type="submit" name="confirm" class="btn btn-primary">確認</button>
+                    <button type="submit" name="calculation" class="btn btn-primary">確認</button>
                 </div>
             </div>
         </div>
