--- a/src/main/resources/templates/input3.html
+++ b/src/main/resources/templates/input3.html
@@ -24,25 +24,40 @@
                 <div class="form-group">
                     <label for="customerName">氏名</label>
                     <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎"/>
+                    <ul th:if="${#fields.hasErrors('customerName')}">
+                        <li class="error-message" th:each="err : ${#fields.errors('customerName')}" th:text="${err}"></li>
+                    </ul>
                 </div>
                 <div class="form-group">
                     <label for="tel">連絡先TEL</label>
                     <input type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678"/>
+                    <ul th:if="${#fields.hasErrors('tel')}">
+                        <li class="error-message" th:each="err : ${#fields.errors('tel')}" th:text="${err}"></li>
+                    </ul>
                 </div>
                 <div class="form-group">
                     <label for="email">連絡先メールアドレス</label>
                     <input type="text" id="email" name="email" th:field="*{email}" class="form-control" value="test@test.com"/>
+                    <ul th:if="${#fields.hasErrors('email')}">
+                    <li class="error-message" th:each="err : ${#fields.errors('email')}" th:text="${err}"></li>
+                    </ul>
                 </div>
 
                 <div class="form-group">
                     <label for="oldAddress">転居元住所（市区町村以下）</label>
                     <input type="text" id="oldAddress" name="oldAddress" th:field="*{oldAddress}"
                            class="form-control" value="新宿区西新宿1-1-1"/>
+                    <ul th:if="${#fields.hasErrors('oldAddress')}">
+                        <li class="error-message" th:each="err : ${#fields.errors('oldAddress')}" th:text="${err}"></li>
+                    </ul>
                 </div>
                 <div class="form-group">
                     <label for="newAddress">転居先住所（市区町村以下）</label>
                     <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control"
                            value="札幌市南区1"/>
+                    <ul th:if="${#fields.hasErrors('newAddress')}">
+                        <li class="error-message" th:each="err : ${#fields.errors('newAddress')}" th:text="${err}"></li>
+                    </ul>
                 </div>
             </fieldset>
 
