--- a/src/main/resources/templates/confirm1.html
+++ b/src/main/resources/templates/confirm1.html
@@ -97,6 +97,9 @@
         </tr>
         </tbody>
       </table>
+
+      <h2>概算お見積り結果は<font size="10"><span th:text= " ${ price } " >  </span></font>円です。</h2>
+
       <div class="form-group">
         <div class="text-center">
           <button type="submit" name="backToInput3" class="btn btn-primary">修正</button>
