--- a/src/main/resources/templates/confirm1.html
+++ b/src/main/resources/templates/confirm1.html
@@ -15,9 +15,9 @@
 <div class="container">
   <form th:action="@{/order}" th:object="${userOrderForm2}" class="form-horizontal" method="post">
     <h1>お見積り情報確認</h1>
-    <ul th:if="${#fields.hasErrors('all')}">
+    <!--<ul th:if="${#fields.hasErrors('all')}">
       <li th:each="err : ${#fields.errors('all')}" th:text="${err}"></li>
-    </ul>
+    </ul>-->
     <div class="col-sm-12">
       <h4>個人情報</h4>
       <table class="table table-bordered">
@@ -98,7 +98,7 @@
         </tbody>
       </table>
 
-      <h2>概算お見積り結果は<font size="10"><span th:text= " ${ price } " >  </span></font>円です。</h2>
+      <!--<h2>概算お見積り結果は<font size="10"><span th:text= " ${ price } " >  </span></font>円です。</h2>-->
 
       <div class="form-group">
         <div class="text-center">
